# high-concurrency-runtime

./: .clang-format  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  SECURITY.md  core.4097643  main.cpp  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/wrk/: benchmark_matrix.sh  post_echo.lua  run_wrk.sh
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-asan/examples/: Makefile  cmake_install.cmake  simple_logger_example
build-bench/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-bench/examples/: Makefile  demo_http_server
build-cmake-check/: CMakeCache.txt
build-echo-only/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-echo-only/examples/: simple_echo_server
build-examples-only/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-examples-only/examples/: simple_echo_server  simple_http_server  simple_logger_example
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-release/examples/: Makefile  cmake_install.cmake  simple_http_server
build-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build-tests/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  demo_http_server  simple_echo_server  simple_http_server  simple_logger_example
build-tests/tests/: CTestTestfile.cmake  Makefile  buffer_smoke_test  cmake_install.cmake  concurrency_smoke_test  epoll_poller_smoke_test  event_loop_smoke_test  http_smoke_test  logger_smoke_test  memory_pool_bench  memory_pool_smoke_test  object_pool_smoke_test  runtime_integration_tests  runtime_integration_tests[1]_include.cmake  runtime_integration_tests[1]_tests.cmake  runtime_unit_tests  runtime_unit_tests[1]_include.cmake  runtime_unit_tests[1]_tests.cmake  tcp_server_smoke_test
docs/: MAINTAINER_REVIEW.md  README.zh-CN.md  SUBSYSTEMS.md  index.md
docs/adr/: 0001-intrusive-rbtree-timer.md  0003-intrusive-quad-heap.md  0004-http2-coro-remove.md  0004-http2-remove.md  0005-rename.md  0006-add-crtp-singleton.md  0007-gateway-header-and-pool-hot-path.md  0008-coroutine-layering.md
docs/benchmark/: bench_all.sh  bench_envoy_vs_gateway.sh  bench_luring_pool_vs_reactor_nginx.sh  c10k-nginx-comparison.md  envoy_gateway.yaml  envoy_vs_gateway_report.md  lan_pressure_test.md  network-libraries.md  nginx_gateway.conf  nginx_upstream.conf  run_bench.sh
docs/design/: network.md
docs/design-zh_cn/: founation.md  logger.md  network.md  scheduler.md
docs/user-guide/: zh-CN.md
examples/: CMakeLists.txt  demo_bench_gateway.cpp  demo_bench_gateway_multi.cpp  demo_bench_timer.cpp  demo_echo_server.cpp  demo_gateway.cpp  demo_http_server.cpp  demo_logger.cpp  demo_rbtree.cpp  simple_echo_server.cpp  simple_http_server.cpp  simple_logger.cpp
examples/foundation/: CMakeLists.txt  demo_logger.cc  demo_logger.cpp  demo_rbtree.cc  demo_rbtree.cpp
examples/gateway/: CMakeLists.txt  demo_bench_gateway.cc  demo_bench_gateway.cpp  demo_bench_gateway_luring.cc  demo_bench_gateway_multi.cc  demo_bench_gateway_multi.cpp  demo_gateway.cc  demo_gateway.cpp  demo_gateway_config.cc  gateway.yaml
examples/http/: CMakeLists.txt  demo_http_server.cc  demo_http_server.cpp
examples/http/www/: index.html
examples/io_uring_echo/: CMakeLists.txt  main.cpp
examples/net/: CMakeLists.txt  demo_bench_timer.cc  demo_bench_timer.cpp  demo_echo_server.cc  demo_echo_server.cpp  demo_luring_raw_echo_server.cc  demo_raw_echo_server.cc  demo_raw_tcp_bench.cc  demo_reactor_coro_echo.cc  demo_redis_lite.cc  demo_redis_lite.cpp  demo_uring_echo.cc
include/coropact/: coropact.h
include/vexo/: vexo.h
scripts/: bench_poller.sh  test_cmake.sh  test_http_demo.sh
src/api/: chat_handler.cpp  models_handler.cpp  sse_writer.cpp
src/base/: current_thread.cpp
src/config/: config.cpp
src/events/: event_journal.cc
src/gateway/: gateway_config_yaml.cc  gateway_core.cc  gateway_server.cc  gateway_server.cpp  health_checker.cc  health_checker.cpp  proxy_pass.cc  proxy_pass.cpp
src/health/: health_handler.cpp
src/http/: debug_handler.cc  debug_handler.cpp  header_utils.h  http_context.cc  (+17 more)
tests/: CMakeLists.txt
tests/adversarial/: test_gateway_resilience_adversarial.cc  test_health_checker_lifetime_reproducer.cc
tests/integration/: test_event_loop.cc  test_event_loop.cpp  test_event_loop_smoke.cc  test_event_loop_smoke.cpp  test_http2_session.cc  test_http2_session.cpp  test_http_server.cc  test_http_server.cpp  test_reverse_proxy.cpp  test_rst_storm_smoke.cc  test_rst_storm_smoke.cpp  test_slowloris_smoke.cc  test_slowloris_smoke.cpp  test_tcp_server.cc  test_tcp_server.cpp  test_tcp_server_smoke.cc  test_tcp_server_smoke.cpp  test_trigger_mode.cc  test_trigger_mode.cpp
tests/stress/: test_concurrency_smoke.cpp  test_concurrency_smoke_standalone.cpp
tests/unit/: bench_memory_pool.cc  bench_memory_pool.cpp  test_blocking_executor.cc  test_bloom_filter.cc  test_buffer.cc  test_buffer.cpp  test_buffer_smoke.cc  test_buffer_smoke.cpp  test_circuit_breaker_smoke.cc  test_circuit_breaker_smoke.cpp  test_coro_frame_allocator_smoke.cc  test_coro_smoke.cc  test_debug_handler_smoke.cc  test_epoll_poller_smoke.cc  test_epoll_poller_smoke.cpp  test_event_journal_smoke.cc  test_event_loop_coro_smoke.cc  test_facade_smoke.cc  test_fallback_config_smoke.cc  test_fallback_config_smoke.cpp  test_gateway_core_smoke.cc  test_gateway_metrics_smoke.cc  test_gateway_metrics_smoke.cpp  test_health_checker_smoke.cc  test_health_checker_smoke.cpp  test_http_smoke.cc  test_http_smoke.cpp  test_intrusive_hash_table_smoke.cc  test_intrusive_list_smoke.cc  test_intrusive_lru.cc  test_intrusive_queue_smoke.cc  test_intrusive_rbtree_clear_smoke.cc  test_io_buffer_smoke.cc  test_lb.cpp  test_load_balancer_smoke.cc  test_load_balancer_smoke.cpp  test_logger.cc  test_logger.cpp  test_logger_smoke.cc  test_logger_smoke.cpp  (+49 more)
(+853 files in other folders)
